--- a/about.css
+++ b/about.css
@@ -22,7 +22,7 @@ main {
 main {
     line-height: 10px;
 }
-#main-content h1 {
+#main-content h2 {
     font-size: 3rem;
     padding-top: 30px;
     padding-left: 10px;
@@ -48,4 +48,25 @@ main {
     display: block;
     text-align: right;
     font-size: 30px;
+}
+
+@media (max-width: 58rem) {
+    main {
+        height: 400px;
+    }
+    #main-content {
+        width: 350px;
+        height: 450px;
+    }
+
+    #main-content h2 {
+        font-size: 1.7rem;
+    }
+    .text-block {
+        font-size: 1.1rem;
+        line-height: 1;
+    }
+    #second {
+        font-size: 1.1rem;
+    }
 }
